# maxdaten.github.io

./: .editorconfig  .gitignore  .markdownlint.yaml  .travis.yml  CNAME  Makefile  Readme.md  default.nix  index.html  markdownlint.yaml  shell.nix  todo.md
.github/workflows/: main.yml
.well-known/: keybase.txt
cv/: 2013-04-01-curriculum-vitae.html  2013-04-01-curriculum-vitae.md  2015-03-02-curriculum-vitae.html  2015-03-02-curriculum-vitae.md  curriculum-vitae.docx  curriculum-vitae.html  curriculum-vitae.md  dump-build.sh
cv/css/: cv.css
nix/: default.nix  nixpkgs-latest.json  setup-shell.sh
site-generator/: CHANGELOG.md  Main.hs  default.nix  shell.nix  site-generator.cabal  site-generator.nix
src/cv/: 00-curriculum-vitae.md  02-expertise.md  03-remaining.md  curriculum-vitae.md  expertise.md  profile.md
src/cv/css/: cv.css
src/cv/schema/: projects.dhall
src/sass/: template.sass
src/templates/: base.tex  template.css  template.css.map  template.html  template.latex
